--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "mongoose": "^5.6.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
